--- a/package.json
+++ b/package.json
@@ -11,20 +11,26 @@
     "vuex": "4.0.0"
   },
   "dependencies": {
+    "@cypress/vite-dev-server": "^1.2.2",
+    "@cypress/vue": "^3.0.1",
     "@emotion/css": "^11.1.3",
     "color": "^3.1.3",
+    "cypress": "^7.1.0",
     "typed-vuex-store": "^2.0.0-beta.4",
     "vue": "3.0.5",
     "vue-router": "4",
-    "vuex": "4.0.0"
+    "vuex": "4.0.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
     "@types/color": "^3.0.1",
     "@vitejs/plugin-vue": "^1.2.1",
     "@vitejs/plugin-vue-jsx": "^1.1.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vue/test-utils": "^2.0.0-rc.4",
     "typescript": "^4.1.3",
     "vite": "^2.1.5",
+    "vue-template-compiler": "^2.6.12",
     "vue-tsc": "^0.0.15"
   }
 }
