--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "cy": "yarn cypress open-ct"
   },
   "resolutions": {
     "vue": "3.0.5",
@@ -14,7 +15,9 @@
     "@cypress/vite-dev-server": "^1.2.2",
     "@cypress/vue": "^3.0.1",
     "@emotion/css": "^11.1.3",
+    "@types/cxs": "^6.2.1",
     "color": "^3.1.3",
+    "cxs": "^6.2.0",
     "cypress": "^7.1.0",
     "typed-vuex-store": "^2.0.0-beta.4",
     "vue": "3.0.5",
@@ -28,6 +31,7 @@
     "@vitejs/plugin-vue-jsx": "^1.1.3",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/test-utils": "^2.0.0-rc.4",
+    "prettier": "2.2.1",
     "typescript": "^4.1.3",
     "vite": "^2.1.5",
     "vue-template-compiler": "^2.6.12",
