--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,9 @@
-{}
+{
+  "bracketSpacing": true,
+  "endOfLine": "lf",
+  "parser": "typescript",
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5"
+}
