--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
   },
   "devDependencies": {
     "@types/color": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "@vitejs/plugin-vue": "^1.2.1",
     "@vitejs/plugin-vue-jsx": "^1.1.3",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/test-utils": "^2.0.0-rc.4",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-vue": "^7.9.0",
     "prettier": "2.2.1",
     "typescript": "^4.1.3",
     "vite": "^2.1.5",
