--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
     "serve": "vite preview",
     "cy": "yarn cypress open-ct"
   },
-  "resolutions": {
-    "vue": "3.0.5",
-    "vuex": "4.0.0"
-  },
   "dependencies": {
     "@cypress/vite-dev-server": "^1.2.2",
     "@cypress/vue": "^3.0.1",
@@ -20,12 +16,13 @@
     "cxs": "^6.2.0",
     "cypress": "^7.1.0",
     "typed-vuex-store": "^2.0.0-beta.4",
-    "vue": "3.0.5",
+    "vue": "^3.0.11",
     "vue-router": "4",
     "vuex": "4.0.0",
     "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
+    "@emotion/eslint-plugin": "^11.2.0",
     "@types/color": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -35,11 +32,23 @@
     "@vue/test-utils": "^2.0.0-rc.4",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-array-func": "^3.1.7",
+    "eslint-plugin-compat": "^3.9.0",
+    "eslint-plugin-deprecation": "^1.2.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-radar": "^0.2.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.1",
+    "eslint-plugin-unicorn": "^29.0.0",
     "eslint-plugin-vue": "^7.9.0",
+    "eslint-plugin-write-good-comments": "^0.1.3",
     "prettier": "2.2.1",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-order": "^4.1.0",
     "typescript": "^4.1.3",
-    "vite": "^2.1.5",
+    "vite": "2.1.5",
     "vue-template-compiler": "^2.6.12",
-    "vue-tsc": "^0.0.15"
+    "vue-tsc": "^0.0.24"
   }
 }
