--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@cypress/vue": "^3.0.1",
     "@emotion/css": "^11.1.3",
     "@types/cxs": "^6.2.1",
+    "chokidar": "3.5.1",
     "color": "^3.1.3",
     "cxs": "^6.2.0",
-    "cypress": "^7.1.0",
+    "cypress-real-events": "^1.3.0",
     "typed-vuex-store": "^2.0.0-beta.4",
     "vue": "^3.0.11",
     "vue-router": "4",
@@ -24,12 +25,15 @@
   "devDependencies": {
     "@emotion/eslint-plugin": "^11.2.0",
     "@types/color": "^3.0.1",
+    "@types/cypress-image-snapshot": "^3.1.5",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "@vitejs/plugin-vue": "^1.2.1",
     "@vitejs/plugin-vue-jsx": "^1.1.3",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/test-utils": "^2.0.0-rc.4",
+    "cypress": "^7.1.0",
+    "cypress-image-snapshot": "^4.0.1",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-array-func": "^3.1.7",
@@ -47,7 +51,7 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-order": "^4.1.0",
     "typescript": "^4.1.3",
-    "vite": "2.1.5",
+    "vite": "^2.2.1",
     "vue-template-compiler": "^2.6.12",
     "vue-tsc": "^0.0.24"
   }
