--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "cy": "yarn cypress open-ct"
+    "cy": "yarn cypress open-ct",
+    "cy:update": "yarn cy --env updateSnapshots=true"
   },
   "dependencies": {
     "@cypress/vite-dev-server": "^1.2.2",
     "@cypress/vue": "^3.0.1",
     "@emotion/css": "^11.1.3",
-    "@types/cxs": "^6.2.1",
     "chokidar": "3.5.1",
     "color": "^3.1.3",
-    "cxs": "^6.2.0",
     "cypress-real-events": "^1.3.0",
     "typed-vuex-store": "^2.0.0-beta.4",
     "vue": "^3.0.11",
